# packaging_tutorial

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/source/: conf.py  example_package_rmkane.rst  modules.rst
src/example_package_rmkane/: example.py
tests/: test_example.py
