[tool.poetry]
name = "example_package_rmkane"
version = "0.0.5"
description = "A small example package"
authors = ["Ryan Kane <rmkane@proton.me>"]
readme = "README.md"
homepage = "https://github.com/rmkane/packaging_tutorial"
repository = "https://github.com/rmkane/packaging_tutorial"
documentation = "https://github.com/rmkane/packaging_tutorial"
keywords = []
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8"
pytest = "^8.2.2"

[tool.poetry.dev-dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
