[tool.poetry]
name = "example_package_rmkane"
version = "0.0.7"
description = "A small example package"
authors = ["Ryan Kane <rmkane@proton.me>"]
readme = "README.md"
homepage = "https://github.com/rmkane/packaging_tutorial"
repository = "https://github.com/rmkane/packaging_tutorial"
documentation = "https://github.com/rmkane/packaging_tutorial"
keywords = ["example", "poetry", "packaging"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "example_package_rmkane", from = "src" }
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
